common_module/network/internetgw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.main.id

  tags = var.tags
}
